fix: last fix z-index map fullscreen button

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -10,6 +10,8 @@
 body {
   background-color: #0d0f11;
   padding: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .grid-wrapper {
@@ -164,6 +166,7 @@ body {
     }
   }
 }
+
 @media screen and (max-width: 1200px) {
   .footer__school,
   .footer__year {
@@ -172,21 +175,55 @@ body {
 }
 
 @media screen and (max-width: 940px) {
-   .grid-wrapper {
-    width: 100%;
-    height: 100%;
+  .grid-wrapper {
+    max-width: 605px;
+    margin: 0px auto;
+    height: auto;
     display: grid;
     gap: 10px;
-    grid-template-columns: 255px 1fr;
-    grid-template-rows: 75px 1fr auto 75px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 75px 300px 360px 350px 75px;
+    justify-content: center;
     grid-template-areas:
-      "list header"
-      "list map"
-      "list map"
-      "list map"
-      "chart map"
-      "chart map"
-      "table map"
-      "table footer";
-    }
-} 
+      "header header"
+      "map map"
+      "list table"
+      "chart chart"
+      "footer footer";
+  }
+  #map .map__legend {
+    flex-wrap: nowrap;
+  }
+}
+@media screen and (max-width: 600px) {
+  .grid-wrapper {
+    max-width: 450px;
+    margin: 0px auto;
+    height: auto;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 450px;
+    grid-template-rows: 75px 300px 360px 360px auto 75px;
+    grid-template-areas:
+      "header"
+      "map"
+      "list"
+      "table"
+      "chart"
+      "footer";
+  }
+  .footer__school,
+  .footer__year {
+    display: none;
+  }
+  .countries-list {
+    justify-self: center;
+    max-width: 255px;
+  }
+  .fullscreen {
+    display: none;
+  }
+}
+.keyboard:hover {
+  cursor: pointer;
+}
