--- a/src/components/list-of-countries/scss/countries-list.css
+++ b/src/components/list-of-countries/scss/countries-list.css
@@ -117,6 +117,9 @@
   -ms-grid-rows: 115px 40px auto 30px;
   grid-template-rows: 115px 40px auto 30px;
       grid-template-areas: "total" "search" "countrieslist" "last";
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .countries-list .total-cases {
